# LearnOpenGL

./: README.md  main.cpp
CLion CMake _Mac/: CMakeLists.txt  main.cpp  test.cpp
CLion CMake _Mac/doc/: 1、OpenGL窗口、环境配置相关问题.md
CLion CMake _Mac/resources/shaders/advancedGL/: 1.1.depth_testing.fs  10.3.asteroids.vs  2.stencil_single_color.fs  3.1.blending.fs  5.1.framebuffers_screen.fs  6.1.skybox.vs  6.2.cubemaps.fs  6.2.cubemaps.vs  9.1.geometry_shader.gs  9.2.geometry_shader.fs  9.2.geometry_shader.gs  9.3.default.vs  9.3.normal_visualization.gs  9.3.normal_visualization.vs
CLion CMake _Mac/resources/shaders/advanced_light/: 1.advanced_lighting.fs  3.1.2.shadow_mapping.fs  3.1.2.shadow_mapping.vs  3.1.2.shadow_mapping_depth.fs  3.1.2.shadow_mapping_depth.vs  3.2.2.point_shadows.fs  3.2.2.point_shadows_depth.gs
CLion CMake _Mac/resources/shaders/lighting/: 1.colors.fs  2.2.basic_lighting.fs  2.2.basic_lighting.vs  5.1.light_casters.fs  5.2.light_casters.fs  5.4.light_casters.fs
CLion CMake _Mac/src/Fixed_rendering_pipeline/: MatrixOperation.h
CLion CMake _Mac/src/Render/: Camera.h  Mesh.h  Model.h  Utils.h
CLion CMake _Mac/src/ffmpeg/: VideoDecoder.cpp
Visual Studio_Windows/LearnOpenGL-createWindow/: LearnOpenGL-createWindow.sln
Visual Studio_Windows/LearnOpenGL-createWindow/Debug/: LearnOpenGL-createWindow.ilk
Visual Studio_Windows/LearnOpenGL-createWindow/LearnOpenGL-createWindow/: Camera.cpp  Camera.h  LearnOpenGL-createWindow.vcxproj  LearnOpenGL-createWindow.vcxproj.filters  ObjModel.cpp  ObjModel.h  SkyBox.cpp  SkyBox.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h  Vector3f.cpp  Vector3f.h  main.cpp
Visual Studio_Windows/LearnOpenGL-createWindow/LearnOpenGL-createWindow/Debug/: LearnOpenGL-createWindow.exe.recipe  objmodel.obj.enc  vc142.idb
Visual Studio_Windows/LearnOpenGL-createWindow/LearnOpenGL-createWindow/Debug/LearnOpe.2233246b.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LearnOpenGL-createWindow.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
doc/: 1、OpenGL窗口、环境配置相关问题.html  1、OpenGL窗口、环境配置相关问题.md
src/Fixed_rendering_pipeline/: BasicShapes.h
